Storage pool in config.yml.

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 USER: "ClusterHQ"
 PASSWORD: "ClusterHQ"
 IP: "10.10.166.9" # SPA
-POOL: "ClusterHQ-Test3"
+STORAGE_POOL: "ClusterHQ-Test3"
 STORAGE_GROUP: "SG_sclf200.lss.emc.com"
