--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 IP: "192.168.40.13" # SPA
 LUN_BASE: 5000 # Temporary fencing for POC env
-STORAGE_POOL: "ClusterHQ-Test3"
+STORAGE_POOL: "Docker_Block_Pool"
