--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,3 @@
 IP: "192.168.40.13" # SPA
-NAVISECCLI_KEYS: "/keys" # Location of naviseccli keys
-# LUN_BASE: 5000 # Temporary fencing for POC env
 STORAGE_POOL: "Docker_Block_Pool"
+NAVISECCLI_KEYS: "/keys"
